@@ -1,3 +1,8 @@
+2021-05-04  Morten Welinder  <terra@gnome.org>
+
+	* lotus.c (lotus_read_new): Parse wk4 row widths.  Parse sheet
+	names in yet another record type.
+
 2021-03-14  Morten Welinder <terra@gnome.org>
 
 	* Release 1.12.49
